# ParallelWSN

./: README.md
code/: .CMakeLists.txt.swp  .makefile.swp  .wsn.c.swp  19_50_04  README.md  cipher.c  cipher.h  cluster.sh  laptop.sh  log.txt  logfile_14_17_42.txt  logfile_21_32_50.txt  logfile_21_35_19.txt  logfile_22_45_40.txt  logfile_23_59_37.txt  logfile_23_59_42.txt  makefile  plot_events.py  run_wsn.sh  runme.sh  wsn  wsn.c  wsn.h  wsn.h.in
code/aes/: ctr.c
code/output/1/: logfile_15_31_47.txt  wsn.21.16571.1.mpiP
code/output/2/: logfile_15_33_06.txt  wsn.21.16645.1.mpiP
code/output/4/: logfile_15_34_55.txt  wsn.21.16733.1.mpiP
code/output/8/: logfile_15_37_43.txt  wsn.21.16831.1.mpiP
code/src/: .CMakeLists.txt.swp  .config.h.in.swp  .wsn.h.in.swp  CMakeLists.txt  cipher.c  cipher.h  config.h  ctr.c  ctr.h  hostfile.in  log.txt  makefile  test  test.c  test.h  wsn.c  wsn.c.bak  wsn.h.in
code/src/template/: config.h.in
report/: report.docx  ~$report.docx
