cmake_minimum_required(VERSION 2.8)
project (fit3143-assignment C)
find_package (MPI REQUIRED)
SET(X_SIZE 4 CACHE STRING "number of station in x dimension")
SET(Y_SIZE 5 CACHE STRING "number of station in y dimension")
SET(SLOTS_NUM 21 CACHE STRING "generate hostfile for testing on single node")
#SET(CMAKE_INSTALL_PREFIX $ENV{PWD} CACHE PATH "the default install dir is under build dir instead of system directory")
configure_file (config.h.in config.h)
configure_file (hostfile.in hostfile)
include_directories(${PROJECT_BINARY_DIR})
if (MPI_FOUND)
    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
else (MPI_FOUND)
    message(SEND_ERROR "This application cannot compile without MPI")
endif (MPI_FOUND)
add_executable( wsn wsn.c )
target_link_libraries(wsn ${MPI_LIBRARIES})

install (TARGETS wsn DESTINATION bin)
install (FILES ${PROJECT_BINARY_DIR}/config.h DESTINATION include)
install (FILES ${PROJECT_BINARY_DIR}/hostfile DESTINATION bin)
