cmake_minimum_required(VERSION 2.8)

SET(CMAKE_INSTALL_PREFIX $ENV{PWD}/WSN_INSTALL CACHE PATH "the default install dir is under build dir instead of system directory")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
set(CMAKE_C_COMPILER mpicc CACHE FILEPATH "" FORCE)
project (fit3143-assignment C)
find_package (MPI REQUIRED)
SET(X_SIZE 4 CACHE STRING "number of station in x dimension")
SET(Y_SIZE 5 CACHE STRING "number of station in y dimension")

#add_subdirectory (tiny-AES-c)
configure_file (wsn.h.in wsn.h)
include_directories(${PROJECT_BINARY_DIR})
if (MPI_FOUND)
    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
else (MPI_FOUND)
    message(SEND_ERROR "This application cannot compile without MPI")
endif (MPI_FOUND)
add_executable( wsn wsn.c )
target_link_libraries(wsn ${MPI_LIBRARIES})

install (TARGETS wsn DESTINATION bin)
install (FILES ${PROJECT_BINARY_DIR}/wsn.h DESTINATION include)
