cmake_minimum_required(VERSION 2.8)

SET(CMAKE_INSTALL_PREFIX $ENV{PWD}/WSN_INSTALL CACHE PATH "the default install dir is under build dir instead of system directory")
project (fit3143-assignment C)
find_package (MPI REQUIRED)
find_package(OpenMP)
if(OpenMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
endif()
set(CMAKE_C_COMPILER mpicc CACHE FILEPATH "" FORCE)

SET(X_SIZE 4 CACHE STRING "number of station in x dimension")
SET(Y_SIZE 5 CACHE STRING "number of station in y dimension")

configure_file (wsn.h.in wsn.h)
include_directories(${PROJECT_BINARY_DIR})
if (MPI_FOUND)
    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
else (MPI_FOUND)
    message(SEND_ERROR "This application cannot compile without MPI")
endif (MPI_FOUND)
add_executable( wsn wsn.c cipher.c )
target_link_libraries(wsn ${MPI_LIBRARIES} m)
install (TARGETS wsn DESTINATION bin)
install (FILES ${PROJECT_BINARY_DIR}/wsn.h ${PROJECT_SOURCE_DIR}/cipher.h DESTINATION include)
